# crayon

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md  crayon_libretro.info  run_emulator.py
.github/workflows/: ci.yml  release.yml
.kiro/specs/crayon-emulator/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/emulator-bugfixes-batch1/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/libretro-integration/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/rom-compatibility-database/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: debugging.md
doc/: compatibility.csv
docs/: mo5-hardware.md
include/: audio_system.h  cassette_interface.h  char_mapping.h  cpu6809.h  crayon_state.h  debugger.h  debugger_ui.h  disassembler.h  emulator_core.h  frontend.h  frontend_headless.h  frontend_sdl.h  gate_array.h  input_handler.h  libretro.h  light_pen.h  master_clock.h  memory_system.h  pia.h  savestate.h  types.h  utils.h  vkeyboard.h
include/ui/: config_manager.h  dialogs.h  file_browser.h  imgui_debugger_ui.h  input_mapper.h  menu_system.h  osd_renderer.h  recent_files_list.h  save_state_manager.h  text_renderer.h  zip_handler.h
src/: audio_system.cpp  cassette_interface.cpp  cpu6809.cpp  debugger.cpp  debugger_ui.cpp  disassembler.cpp  emulator_core.cpp  frontend_headless.cpp  frontend_sdl.cpp  gate_array.cpp  input_handler.cpp  libretro.cpp  light_pen.cpp  main.cpp  master_clock.cpp  memory_system.cpp  pia.cpp  savestate.cpp  vkeyboard.cpp
src/ui/: config_manager.cpp  dialogs.cpp  file_browser.cpp  imgui_debugger_ui.cpp  input_mapper.cpp  menu_system.cpp  osd_renderer.cpp  recent_files_list.cpp  save_state_manager.cpp  text_renderer.cpp  zip_handler.cpp
tests/: test_cpu_interrupts.cpp  test_placeholder.cpp
tools/: boot_diag.cpp  disasm_roms.cpp  test_compatibility.py
